Initial QRTyard Cafe Website

--- a/qrt.html
+++ b/qrt.html
@@ -16,7 +16,7 @@
 <header>
     <nav>
         <div class="logo">
-            <img src="https://scontent-jnb2-1.cdninstagram.com/v/t51.2885-19/536494410_17845843275551777_4680193346308072602_n.jpg?stp=dst-jpg_s150x150_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby42NzcuYzIifQ&_nc_ht=scontent-jnb2-1.cdninstagram.com&_nc_cat=105&_nc_oc=Q6cZ2QGLKthJZXlfWOid1ZriJvmj16-7i7-o15YCbR33EAivFcpTb1XIXjtKwY0v-UGv1c8vNTtgQAhrmsHQG_3SHX-Z&_nc_ohc=No2BmKchCsYQ7kNvwGG9FKo&_nc_gid=H0XdY_DpIJUikBtGEsqZ1w&edm=AOQ1c0wBAAAA&ccb=7-5&oh=00_AfvCdDCPOO92qfvUcNRxhXv44DUdEHWfCTz5wJkBL8xzbA&oe=699CC4FF&_nc_sid=8b3546/logo.png" alt="Qrtyard Cafe Logo">
+            <img src="image/my-logo.png" alt="Qrtyard Cafe Logo" width="150">
         </div>
         <ul>
             <li><a href="#hero">Home</a></li>
@@ -34,7 +34,7 @@
 <section id="hero">
     <div class="hero-text">
         <h1>Welcome to Qrtyard Cafe & Social Club</h1>
-        <p>Your creative hub for coffee, community, and connection in Fourways, Johannesburg.</p>
+        <p>At Qrtyard, we’re more than just a cafe — we’re a place where friends meet, conversations flow, and good vibes come standard. From expertly brewed coffee and refreshing smoothies to delicious snacks and local treats, we serve up quality with heart in Fourways, Johannesburg.</p>
         <a href="#contact" class="btn">Visit Us</a>
     </div>
 </section>
@@ -120,9 +120,10 @@
 </section>
 
 <!-- Instagram Feed -->
-<section id="instagram">
-    <h2>Follow Us on Instagram</h2>
-    <iframe src="https://www.instagram.com/qrtyard" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+<section id="instagram-link">
+    <a href="https://www.instagram.com/qrtyard?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="insta-icon">
+        <i class="fab fa-instagram"></i>
+    </a>
 </section>
 
 <!-- Contact -->
@@ -143,13 +144,13 @@
     <button id="show-all-hours-btn">Show All Hours</button>
     <div class="all-hours" id="all-hours" style="display:none;">
         <ul>
+            <li>Monday: 8 am–4:30 pm</li>
+            <li>Tuesday: 8 am–4:30 pm</li>
+            <li>Wednesday: 8 am–4:30 pm</li>
             <li>Thursday: 8 am–4:30 pm</li>
-            <li>Friday: 8 am–4:30 pm</li>
+            <li>Friday: 8 am–3 pm</li>
             <li>Saturday: 7 am–4:30 pm</li>
             <li>Sunday: 7:30 am–3:30 pm</li>
-            <li>Monday: 8 am–4:30 pm</li>
-            <li>Tuesday: 6 am–3 pm</li>
-            <li>Wednesday: 8 am–4:30 pm</li>
         </ul>
     </div>
 </section>
