Fixed mobile menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="logo">
             <img src="image/my-logo.png" alt="Qrtyard Cafe Logo" width="150">
         </div>
-        <ul>
+        <ul   id="nav-links">
             <li><a href="#hero">Home</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#events">Events</a></li>
@@ -26,7 +26,9 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
         </ul>
-        <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+        <div class="menu-toggle" id="menu-toggle">
+         ☰
+        </div>
     </nav>
 </header>
 
