--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
         </ul>
-        <div class="menu-toggle" id="menu-toggle">
-         ☰
-        </div>
+        
+        <div class="menu-toggle" id="menu-toggle">☰</div>
+
     </nav>
 </header>
 
